--- a/index.html
+++ b/index.html
@@ -29,31 +29,7 @@
     <div id="navbarExampleTransparentExample" class="navbar-menu">
       <div class="navbar-start">
         <h1>Currency Exchange</h1>
-        <a class="navbar-item" href="">
-          Home
-        </a>
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-item" href="">
-            Docs
-          </a>
-          <div class="navbar-dropdown is-boxed">
-            <a class="navbar-item" href="">
-              Overview
-            </a>
-            <a class="navbar-item" href="">
-              Modifiers
-            </a>
-            <a class="navbar-item" href="">
-              Columns
-            </a>
-            <a class="navbar-item" href="">
-              Layout
-            </a>
-            <a class="navbar-item" href="">
-              Form
-            </a>
-          </div>
-        </div>
+        
       </div>
     </div>
   </nav>
@@ -62,7 +38,7 @@
 <!--Currency Conversion Form-->
 
 <section class="section is-small">
-  <h3 class="title custTitle">Currency Converter</h3>
+  <h3 class="title custTitle boxColor">Currency Converter</h3>
     <form id="convertForm">
       <div class="container is-fluid searchBox">
         <input id="convertAmount" class="input custInput" type="text" placeholder="Amount">
@@ -419,7 +395,7 @@
       </div>
     </form><br>
     <div class="container custRatesContain">
-      <div id="convertedResult" class="notification">
+      <div id="convertedResult" class="notification boxColor">
       </div>
     </div>
     <div><br>
@@ -430,31 +406,31 @@
   
 <!-- data card section -->
 <section class="section custSec">
-  <h4 class="title custTitle">Local Exchange Locations</h4>
+  <h4 class="title custTitle boxColor">Local Exchange Locations</h4>
   <!-- first Row of data cards -->
   <div class="tile is-ancestor">
     <div class="tile is-parent">
-      <article class="tile is-child box">
-        <p id="dataName1" class="title"></p>
-        <p id="dataAddress1" class="subtitle"></p>
+      <article class="tile is-child box boxColor">
+        <p id="dataName1" class="title textColor"></p>
+        <p id="dataAddress1" class="subtitle addressColor"></p>
         <div class="content">
           <p></p>
         </div>
       </article>
     </div>
     <div class="tile is-parent">
-      <article class="tile is-child box">
-        <p id="dataName2" class="title"></p>
-        <p id="dataAddress2" class="subtitle"></p>
+      <article class="tile is-child box boxColor">
+        <p id="dataName2" class="title textColor"></p>
+        <p id="dataAddress2" class="subtitle addressColor"></p>
         <div class="content">
           <p></p>
         </div>
       </article>
     </div>
     <div class="tile is-parent">
-      <article class="tile is-child box">
-        <p id="dataName3" class="title"></p>
-        <p id="dataAddress3" class="subtitle"></p>
+      <article class="tile is-child box boxColor">
+        <p id="dataName3" class="title textColor"></p>
+        <p id="dataAddress3" class="subtitle addressColor"></p>
         <div class="content">
           <p></p>
         </div>
@@ -464,29 +440,29 @@
 
   <!-- second row of data cards -->
 
-  <div class="tile is-ancestor">
+  <div class="tile is-ancestor ">
     <div class="tile is-parent">
-      <article class="tile is-child box">
-        <p id="dataName4" class="title"></p>
-        <p id="dataAddress4" class="subtitle"></p>
+      <article class="tile is-child box boxColor">
+        <p id="dataName4" class="title textColor"></p>
+        <p id="dataAddress4" class="subtitle addressColor"></p>
         <div class="content">
           <p></p>
         </div>
       </article>
     </div>
     <div class="tile is-parent">
-      <article class="tile is-child box">
-        <p id="dataName5" class="title"></p>
-        <p id="dataAddress5" class="subtitle"></p>
+      <article class="tile is-child box boxColor">
+        <p id="dataName5" class="title textColor"></p>
+        <p id="dataAddress5" class="subtitle addressColor"></p>
         <div class="content">
           <p></p>
         </div>
       </article>
     </div>
     <div class="tile is-parent">
-      <article class="tile is-child box">
-        <p id="dataName6" class="title"></p>
-        <p id="dataAddress6" class="subtitle"></p>
+      <article class="tile is-child box boxColor">
+        <p id="dataName6" class="title textColor"></p>
+        <p id="dataAddress6" class="subtitle addressColor"></p>
         <div class="content">
           <p></p>
         </div>
