--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
 <section class="section is-small">
   <h3 class="title custTitle boxColor">Currency Converter</h3>
+  <div id="error"></div>
     <form id="convertForm">
       <div class="container is-fluid searchBox">
         <input id="convertAmount" class="input custInput" type="text" placeholder="Amount">
